Change method that creates a new file to make it platform independent